--- a/css/about.css
+++ b/css/about.css
@@ -55,7 +55,7 @@
     margin-top: 1rem ;
 }
 
-/* =============TEAM============ */
+/* ======================= TEAM ======================= */
 
 .team{
     background: var(--color-bg1);
@@ -88,12 +88,12 @@
     filter: saturate(1);
 }
 
-.team__member--info *{
+.team__member-info *{
     text-align: center;
     margin-top: 1.4rem;
 }
 
-.team__member--info p{
+.team__member-info p{
     color: var(--color-light);
 }
 
@@ -105,13 +105,14 @@
     display: flex;
     flex-direction: column;
     background: var(--color-primary);
-    border-radius:1rem 0 0 1rem ;
-    box-shadow:-2rem 0 2rem rgba(0, 0, 0, 0.3) ;
+    border-radius: 1rem 0 0 1rem ;
+    box-shadow: -2rem 0 2rem rgba(0, 0, 0, 0.3);
     transition: var(--transition);
 }
 .team__member:hover .team__member-socials {
     right: 0;
 }
+
 .team__member-socials a{
     padding: 1rem;
 }
