--- a/css/contact.css
+++ b/css/contact.css
@@ -1,6 +1,5 @@
 .contact__container{
     background: var(--color-bg1);
-    /* border: 3px solid red; */
     padding: 4rem;
     display: grid;
     grid-template-columns: 40% 60%;
@@ -10,9 +9,7 @@
     border-radius: 1rem;
 }
 
-
-/* ================ASIDE================= */
-
+/* ================ ASIDE ================= */
 .contact__aside{
     background: var(--color-primary);
     padding: 3rem;
@@ -27,42 +24,29 @@
 }
 
 .contact__aside h2{
-    font-family: 'Inter', sans-serif;
-font-family: 'Karla', sans-serif;
-font-family: 'Oswald', sans-serif;
-}
-.contact__aside p{
-    font-family: 'Inter', sans-serif;
-font-family: 'Karla', sans-serif;
-font-family: 'Nunito Sans', sans-serif;
-}
-.contact__aside h2{
     text-align: left;
     margin-bottom: 1rem;
 }
 .contact__aside p{
     font-size: 0.9rem;
     margin-bottom: 2rem;
-
 }
 
-.contact__detailss li{
-    display: grid;
+.contact__details li{
+    display: flex;
     gap: 1rem;
     align-items: center;
     margin-bottom: 1rem;
 }
 
 .contact__socials{
-    /* font-size: 50px; */
     display: flex;
     gap: 0.8rem;
     margin-top: 3rem;
 }
 
 .contact__socials a{
-    background: 
-    var(--color-bg2);
+    background: var(--color-bg2);
     padding: 0.5rem;
     border-radius: 50%;
     font-size: 0.9rem;
@@ -90,8 +74,7 @@ font-family: 'Nunito Sans', sans-serif;
     width: 50%;
 }
 
-input,
- textarea {
+input, textarea {
     width: 100%;
     padding: 1rem;
     background: var(--color-bg);
@@ -104,54 +87,53 @@ input,
     cursor: pointer;
 }
 
-
-
-/* =============MEDIA QUERIES TAB================ */
-    @media screen and (max-width:1824px) {
-       .contact{
+/* ============= MEDIA QUERIES (TABLETS) ================ */
+@media screen and (max-width:1024px) {
+    .contact{
         /* padding-bottom: 0; */
-       }
+    }
 
-       .contact__container{
+    .contact__container{
         gap: 1.5rem ;
         margin-top: 3rem;
         height: auto;
         padding: 1.5rem;
-       }
+    }
 
-       .contact__aside {
+    .contact__aside {
         width: auto;
         padding: 1.5rem;
         bottom: 0;
-       }
+    }
 
-       .contact__form{
+    .contact__form{
         align-self: center;
         margin-right: 1.5rem;
-       }
     }
+}
 
     /* =============MEDIA QUERIES small screen dev================ */
 
-    @media screen and (max-width:620px){
-        .contact__container{
-            grid-template-columns: 1fr;
-            gap: 3rem;
-            margin-top: 0;
-            padding: 0;
+@media screen and (max-width:600px) {
+    .contact__container{
+        grid-template-columns: 1fr;
+        gap: 3rem;
+        margin-top: 0;
+        padding: 0;
 
-        }
-
-        .contact__form{
-            margin: 0 1.5rem 3rem;
-
-        }
-
-        .form__name{
-            flex-direction: column;
-            width: 100%;
-        }
-        .form__name input[type="text"]{
-            width: 100%;
-        }
     }
+
+    .contact__form{
+        margin: 0 1.5rem 3rem;
+
+    }
+
+    .form__name{
+        flex-direction: column;
+        width: 100%;
+    }
+
+    .form__name input[type="text"]{
+        width: 100%;
+    }
+}
