Removed green border for achievement cards in mobile, also changed border-radius for all button

--- a/css/about.css
+++ b/css/about.css
@@ -119,7 +119,7 @@
 
 
 /* ===================== media queries =================== */
-@media screen and (max-width:1024) {
+@media screen and (max-width:1024px) {
     .about__achievements{
         margin-top: 2rem;
     }
@@ -149,16 +149,9 @@
 /* ====== MEDIA QUERIES (MOBILE) ==================== */
 
 @media screen and (max-width:600px) {
-    .about__achievements-container{
-        display: flex !important;
-        /* flex-direction: column; */
-        flex-direction: column;
-        /* border: 3px solid red; */
-    }
     .achievements__cards{
         grid-template-columns: 1fr 1fr;
         gap: 0.7rem;
-        border: 3px solid green;
     }
     .team__container{
         grid-template-columns: 1fr 1fr;
