--- a/css/contact.css
+++ b/css/contact.css
@@ -75,6 +75,9 @@
 }
 
 input, textarea {
+    border-style:solid ;
+    border-width: 1px;
+    border-color: var(--color-white);
     width: 100%;
     padding: 1rem;
     background: var(--color-bg);
@@ -82,6 +85,7 @@ input, textarea {
 }
 
 .contact__form .btn {
+    border-radius: 20rem;
     width:max-content ;
     margin-top: 1rem;
     cursor: pointer;
